# tauri-app

./: index.html  package.json  tailwind.config.mjs  vite.config.ts
src/: App.tsx  fetch.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Components/: Tab.tsx
