[package]
name = "tauri-app"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Enable iOS-specific features
[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"

[features]
# By default Tauri runs in production mode
# when the `tauri dev` or `tauri build` command is used.
# this feature is used for production builds to enable optimizations
default = ["custom-protocol"]
# this feature is required to use custom protocol
custom-protocol = ["tauri/custom-protocol"]
